--- a/style/_flexbox.scss
+++ b/style/_flexbox.scss
@@ -166,3 +166,19 @@
   }
   align-content: $value;
 }
+
+@mixin boxGrid($columnNumber, $spacingPercent) {
+    $contentPercent: 100%;
+    $sideMargin: ($spacingPercent/2);
+    $marginInt: strip-units($sideMargin);
+    @include justify-content(flex-start);
+    @include flex-flow(wrap);
+    @include transition();
+    @include flexbox();
+    margin: 0 -$sideMargin;
+    width: $contentPercent + $spacingPercent;
+    > * {
+        width: ($contentPercent/$columnNumber) - $spacingPercent;
+        margin: 0 #{$sideMargin} ($marginInt + ($marginInt / $columnNumber) * 1em)
+    }
+}
