--- a/style/_reset.scss
+++ b/style/_reset.scss
@@ -536,6 +536,53 @@ $menu_color: #fff;
 }
 // menu
 
+//SELECT
+// .selbel_w {
+//   position: relative;
+//   display: block;
+//   width: 100%;
+//   font: 400 14px/40px $f;
+//   height: 40px;
+//   select {
+//     width: 100%;
+//     height: 100%;
+//     cursor: pointer;
+//     position: relative;
+//     display: block;
+//     z-index: 1;
+//     opacity: 0;
+//     -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=0)";
+//     + span {
+//       position: absolute;
+//       top: 0;
+//       left: 0;
+//       right: 0;
+//       bottom: 0;
+//       background: #fff;
+//       color: #555;
+//       padding: 0 10px;
+//       @include border-radius(5px);
+//       border: 1px solid #eee;
+//       &:after {
+//         content: '';
+//         width: 0;
+//         height: 0;
+//         border-style: solid;
+//         border-width: 9px 5px 0 5px;
+//         border-color: #555 transparent transparent transparent;
+//         position: absolute;
+//         right: 13px;
+//         top: 16px;
+//       }
+//       &.err {
+//         border-color: #ef4036
+//       }
+//     }
+//     option {
+//       padding: 5px
+//     }
+//   }
+// }
 
 // contact form 7 validation
 
