Height 100% for validation form to Contact Form 7

--- a/style/_reset.scss
+++ b/style/_reset.scss
@@ -602,7 +602,7 @@ div.wpcf7 {
     right: 0;
     cursor: pointer;
     font-family: $font;
-    height: 30px;
+    height: 100%;
     line-height: 30px;
     padding: 0 10px;
   }
