--- a/include/admin-assets/admin-area.css
+++ b/include/admin-assets/admin-area.css
@@ -8,7 +8,7 @@ body, html {
     width: 100%;
 }
 body {
-    background: url(//farm6.staticflickr.com/5541/10785702065_591a36db1a_o_d.jpg) no-repeat 50% 50%;
+    background: url(../../images/admin.jpg) no-repeat 50% 50%;
     -webkit-background-size: cover;
     -khtml-background-size: cover;
     -moz-background-size: cover;
