--- a/style/_reset.scss
+++ b/style/_reset.scss
@@ -1,3 +1,5 @@
+@import '_flexbox';
+
 $font-base: 20px;
 
 /// Strips the unit from a number.
@@ -537,126 +539,126 @@ $menu_color: #fff;
 
 // respond menu
 
-@media screen and (max-width: 1024px) {
-  #mainMenu {
-    position: fixed;
-    top: 0;
-    width: 100%;
-    @include transform(translateX(100%));
-    @include transition();
-    background: rgba(26, 26, 26, 0.95);
-    right: 0;
-    bottom: 0;
-    overflow: auto;
-    z-index: 999;
-    ul {
-      li {
-        display: inline-block;
-        width: 100%;
-        a {
-          margin: 0;
-          color: #fff;
-          font-size: 18px;
-          padding: 15px 3%;
-          border-bottom: 1px solid #000;
-          position: relative;
-          display: block;
-          text-decoration: none;
-          &:after {
-            display: none;
-          }
-        }
-        &:hover > a {
-          background: none;
-          color: #fff;
-        }
-        &.current-menu-item > a {
-          background: #f6542f;
-          color: #fff;
-        }
-        &.menu-item-has-children > a {
-          &:after {
-            display: none;
-          }
-        }
-        span {
-          width: 60px;
-          background: #f6542f;
-          position: absolute;
-          right: 0;
-          top: 0;
-          bottom: 0;
-          cursor: pointer;
-          &:before {
-            content: "";
-            @include center();
-            background: #fff;
-            width: 18px;
-            height: 2px;
-            @include transition();
-          }
-          &:after {
-            content: "";
-            @include center();
-            background: #fff;
-            width: 2px;
-            height: 18px;
-            @include transition();
-          }
-          &.active {
-            &:after {
-              opacity: 0;
-            }
-          }
-        }
-        ul {
-          margin-top: 0;
-          opacity: 1;
-          visibility: visible;
-          width: 100%;
-          position: static;
-          background: none;
-          display: none;
-          @include transition(none);
-          li {
-            display: inline-block;
-            float: none;
-            width: 100%;
-            padding-bottom: 0;
-            a {
-              margin: 0;
-              color: #fff;
-              font-size: 18px;
-              padding: 10px 3%;
-              border-bottom: 1px solid #000;
-              position: relative;
-              text-decoration: none;
-            }
-            span {
-              background: none;
-            }
-            &:hover a {
-              background: none;
-              color: #fff;
-            }
-            &.current-menu-item a {
-              background: #f6542f;
-              color: #fff;
-            }
-            ul {
-              li {
-                a {
-                  font-size: 16px;
-                  font-style: italic;
-                }
-              }
-            }
-          }
-        }
-      }
-    }
-  }
-}
+//@media screen and (max-width: 1024px) {
+//  #mainMenu {
+//    position: fixed;
+//    top: 0;
+//    width: 100%;
+//    @include transform(translateX(100%));
+//    @include transition();
+//    background: rgba(26, 26, 26, 0.95);
+//    right: 0;
+//    bottom: 0;
+//    overflow: auto;
+//    z-index: 999;
+//    ul {
+//      li {
+//        display: inline-block;
+//        width: 100%;
+//        a {
+//          margin: 0;
+//          color: #fff;
+//          font-size: 18px;
+//          padding: 15px 3%;
+//          border-bottom: 1px solid #000;
+//          position: relative;
+//          display: block;
+//          text-decoration: none;
+//          &:after {
+//            display: none;
+//          }
+//        }
+//        &:hover > a {
+//          background: none;
+//          color: #fff;
+//        }
+//        &.current-menu-item > a {
+//          background: #f6542f;
+//          color: #fff;
+//        }
+//        &.menu-item-has-children > a {
+//          &:after {
+//            display: none;
+//          }
+//        }
+//        span {
+//          width: 60px;
+//          background: #f6542f;
+//          position: absolute;
+//          right: 0;
+//          top: 0;
+//          bottom: 0;
+//          cursor: pointer;
+//          &:before {
+//            content: "";
+//            @include center();
+//            background: #fff;
+//            width: 18px;
+//            height: 2px;
+//            @include transition();
+//          }
+//          &:after {
+//            content: "";
+//            @include center();
+//            background: #fff;
+//            width: 2px;
+//            height: 18px;
+//            @include transition();
+//          }
+//          &.active {
+//            &:after {
+//              opacity: 0;
+//            }
+//          }
+//        }
+//        ul {
+//          margin-top: 0;
+//          opacity: 1;
+//          visibility: visible;
+//          width: 100%;
+//          position: static;
+//          background: none;
+//          display: none;
+//          @include transition(none);
+//          li {
+//            display: inline-block;
+//            float: none;
+//            width: 100%;
+//            padding-bottom: 0;
+//            a {
+//              margin: 0;
+//              color: #fff;
+//              font-size: 18px;
+//              padding: 10px 3%;
+//              border-bottom: 1px solid #000;
+//              position: relative;
+//              text-decoration: none;
+//            }
+//            span {
+//              background: none;
+//            }
+//            &:hover a {
+//              background: none;
+//              color: #fff;
+//            }
+//            &.current-menu-item a {
+//              background: #f6542f;
+//              color: #fff;
+//            }
+//            ul {
+//              li {
+//                a {
+//                  font-size: 16px;
+//                  font-style: italic;
+//                }
+//              }
+//            }
+//          }
+//        }
+//      }
+//    }
+//  }
+//}
 
 // respond menu
 
