--- a/style/style.css
+++ b/style/style.css
@@ -89,11 +89,11 @@ input[type="submit"], input[type="button"] {
 /* Selection */
 ::-moz-selection {
   color: #fff;
-  background: #ff4e50; }
+  background: #000; }
 
 ::selection {
   color: #fff;
-  background: #ff4e50; }
+  background: #000; }
 
 input::-webkit-input-placeholder, textarea::-webkit-input-placeholder {
   color: #999; }
@@ -101,6 +101,64 @@ input::-webkit-input-placeholder, textarea::-webkit-input-placeholder {
 input::-moz-placeholder, textarea::-moz-placeholder {
   color: #999;
   opacity: 1; }
+
+input::-webkit-input-placeholder, textarea::-webkit-input-placeholder {
+  color: #999;
+  opacity: 1; }
+input:-moz-placeholder, textarea:-moz-placeholder {
+  color: #999;
+  opacity: 1; }
+input::-moz-placeholder, textarea::-moz-placeholder {
+  color: #999;
+  opacity: 1; }
+input:-ms-input-placeholder, textarea:-ms-input-placeholder {
+  color: #999;
+  opacity: 1; }
+
+input:not([type='submit']) {
+  background: #fcfcfc; }
+  input:not([type='submit'])::-webkit-input-placeholder {
+    color: #aaa;
+    line-height: 15px;
+    -webkit-transition: all 0.4s ease;
+    -moz-transition: all 0.4s ease;
+    -ms-transition: all 0.4s ease;
+    -o-transition: all 0.4s ease;
+    transition: all 0.4s ease; }
+  input:not([type='submit']):-moz-placeholder {
+    color: #aaa;
+    line-height: 15px;
+    -webkit-transition: all 0.4s ease;
+    -moz-transition: all 0.4s ease;
+    -ms-transition: all 0.4s ease;
+    -o-transition: all 0.4s ease;
+    transition: all 0.4s ease; }
+  input:not([type='submit'])::-moz-placeholder {
+    color: #aaa;
+    line-height: 15px;
+    -webkit-transition: all 0.4s ease;
+    -moz-transition: all 0.4s ease;
+    -ms-transition: all 0.4s ease;
+    -o-transition: all 0.4s ease;
+    transition: all 0.4s ease; }
+  input:not([type='submit']):-ms-input-placeholder {
+    color: #aaa;
+    line-height: 15px;
+    -webkit-transition: all 0.4s ease;
+    -moz-transition: all 0.4s ease;
+    -ms-transition: all 0.4s ease;
+    -o-transition: all 0.4s ease;
+    transition: all 0.4s ease; }
+  input:not([type='submit']):focus {
+    background: #f1f1f1; }
+    input:not([type='submit']):focus::-webkit-input-placeholder {
+      line-height: 50px; }
+    input:not([type='submit']):focus:-moz-placeholder {
+      line-height: 50px; }
+    input:not([type='submit']):focus::-moz-placeholder {
+      line-height: 50px; }
+    input:not([type='submit']):focus:-ms-input-placeholder {
+      line-height: 50px; }
 
 hr {
   clear: both;
@@ -110,24 +168,39 @@ hr {
   height: 0; }
 
 body, html {
-  height: 100%; }
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -webkit-flex-direction: column;
+  -ms-flex-direction: column;
+  flex-direction: column;
+  min-height: 100vh; }
 
 main {
-  min-height: 100%; }
+  -webkit-box-flex: 1;
+  -webkit-flex: 1 0 auto;
+  -ms-flex: 1 0 auto;
+  flex: 1 0 auto; }
+
+footer {
+  -webkit-box-flex: 0;
+  -webkit-flex: none;
+  -ms-flex: none;
+  flex: none; }
 
 * html main {
   height: 100%; }
 
-.pusher {
-  clear: both; }
-
 article, aside, details, figcaption, figure, footer, header, hgroup, nav, section, summary {
   display: block; }
 
-.alignleft, .left {
+.alignleft {
   float: left; }
 
-.alignright, .right {
+.alignright {
   float: right; }
 
 img.alignleft {
@@ -145,8 +218,7 @@ img {
   height: auto;
   display: block; }
 
-header, footer {
-  float: left;
+header, .content, footer {
   width: 100%; }
 
 .valign {
@@ -160,15 +232,15 @@ header, footer {
   vertical-align: middle;
   width: 0; }
 
-.wrap {
+.wrapper {
   font-size: 0;
   text-align: center;
   margin: 0 -10px; }
-  .wrap .item {
+  .wrapper .item {
     display: inline-block;
     vertical-align: top; }
 
-#menuopen {
+#menuOpen {
   background: rgba(255, 255, 255, 0);
   border: medium none;
   cursor: pointer;
@@ -184,7 +256,7 @@ header, footer {
   transition: all 0.4s ease;
   width: 23px;
   z-index: 2000; }
-  #menuopen:before, #menuopen:after {
+  #menuOpen:before, #menuOpen:after {
     border-radius: 10px;
     box-shadow: 0 3px 0 0 #fff, 0 15px 0 0 #fff;
     -webkit-box-shadow: 0 3px 0 0 #fff, 0 15px 0 0 #fff;
@@ -200,7 +272,7 @@ header, footer {
     -ms-transition: all 0.4s ease;
     -o-transition: all 0.4s ease;
     transition: all 0.4s ease; }
-  #menuopen:after {
+  #menuOpen:after {
     border-radius: 10px;
     -webkit-box-shadow: 0 3px 0 0 #fff;
     -moz-box-shadow: 0 3px 0 0 #fff;
@@ -216,7 +288,7 @@ header, footer {
     -ms-transition: all 0.4s ease;
     -o-transition: all 0.4s ease;
     transition: all 0.4s ease; }
-  #menuopen.active:before, #menuopen.active:after {
+  #menuOpen.active:before, #menuOpen.active:after {
     border-radius: 10px;
     background: #fff;
     -webkit-box-shadow: none;
@@ -227,7 +299,7 @@ header, footer {
     left: 0;
     right: 0;
     top: 0; }
-  #menuopen.active:before {
+  #menuOpen.active:before {
     backface-visibility: hidden;
     -webkit-backface-visibility: hidden;
     -moz-backface-visibility: hidden;
@@ -236,7 +308,7 @@ header, footer {
     -ms-transform: rotate(-45deg) translate(-7px, 7px);
     -o-transform: rotate(-45deg) translate(-7px, 7px);
     transform: rotate(-45deg) translate(-7px, 7px); }
-  #menuopen.active:after {
+  #menuOpen.active:after {
     backface-visibility: hidden;
     -webkit-backface-visibility: hidden;
     -moz-backface-visibility: hidden;
@@ -246,26 +318,313 @@ header, footer {
     -o-transform: rotate(45deg) translate(7px, 7px);
     transform: rotate(45deg) translate(7px, 7px); }
 
+div.wpcf7 .wpcf7-form-control-wrap {
+  display: block !important;
+  margin-bottom: 20px;
+  clear: both; }
+div.wpcf7 .wpcf7-not-valid-tip {
+  background: #fff;
+  border: 1px solid #FF0000;
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  cursor: pointer;
+  font-family: "Helvetica Neue";
+  height: 100%;
+  line-height: 30px;
+  padding: 0 10px; }
+div.wpcf7 .wpcf7-response-output {
+  float: left;
+  width: 100%;
+  margin: 10px 0 0 0;
+  font-family: "Helvetica Neue";
+  line-height: 20px;
+  padding: 5px 20px;
+  text-align: center; }
+  div.wpcf7 .wpcf7-response-output.wpcf7-validation-errors {
+    background: #FF5F5F;
+    color: #fff; }
+  div.wpcf7 .wpcf7-response-output.wpcf7-mail-sent-ng {
+    background: #1091ae;
+    color: #fff; }
+  div.wpcf7 .wpcf7-response-output.wpcf7-mail-sent-ok {
+    background: #16A085;
+    color: #fff; }
+div.wpcf7 .ajax-loader {
+  display: none; }
+div.wpcf7 input:not([type="submit"]), div.wpcf7 textarea {
+  width: 100%;
+  border: 1px solid #086195;
+  padding: 0 12px;
+  display: block;
+  height: 49px;
+  -webkit-border-radius: 5px;
+  -khtml-border-radius: 5px;
+  -moz-border-radius: 5px;
+  -ms-border-radius: 5px;
+  border-radius: 5px;
+  margin: 0 auto 20px;
+  font: 400 16px "Helvetica Neue"; }
+  div.wpcf7 input:not([type="submit"])::-webkit-input-placeholder, div.wpcf7 textarea::-webkit-input-placeholder {
+    color: #999; }
+  div.wpcf7 input:not([type="submit"]):-moz-placeholder, div.wpcf7 textarea:-moz-placeholder {
+    color: #999; }
+  div.wpcf7 input:not([type="submit"])::-moz-placeholder, div.wpcf7 textarea::-moz-placeholder {
+    color: #999; }
+  div.wpcf7 input:not([type="submit"]):-ms-input-placeholder, div.wpcf7 textarea:-ms-input-placeholder {
+    color: #999; }
+  div.wpcf7 input:not([type="submit"]):focus, div.wpcf7 textarea:focus {
+    background: rgba(8, 97, 149, 0.08); }
+div.wpcf7 textarea {
+  resize: none;
+  overflow: auto;
+  height: 150px;
+  padding: 10px; }
+
+html {
+  font-size: 20px; }
+
 body {
   font-family: "Helvetica Neue", sans-serif;
   font-weight: 400;
   background: #fff; }
 
 main {
-  overflow: hidden; }
+  overflow: hidden;
+  position: relative; }
 
-.container {
+.wrap {
   margin: 0 auto;
   width: 1140px;
   max-width: 94%;
-  position: relative; }
+  position: relative;
+  font-size: 0; }
 
-#mainslider {
+.slider {
   float: left;
   width: 100%; }
 
-.content {
-  float: left;
-  width: 100%; }
+@media screen and (min-width: 1025px) {
+  #mainMenu {
+    margin-left: 160px; }
+    #mainMenu > ul {
+      font-size: 0;
+      display: -webkit-box;
+      display: -webkit-flex;
+      display: -moz-flex;
+      display: -ms-flexbox;
+      display: flex;
+      -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+      -webkit-justify-content: space-between;
+      -moz-justify-content: space-between;
+      justify-content: space-between; }
+      #mainMenu > ul > li {
+        position: relative; }
+        #mainMenu > ul > li > a {
+          font-size: 0.8rem;
+          display: block;
+          text-transform: uppercase;
+          line-height: 100px;
+          color: #000;
+          font-weight: 700;
+          padding: 0 20px; }
+        #mainMenu > ul > li:after {
+          content: "";
+          position: absolute;
+          bottom: 0;
+          left: 0;
+          right: 0;
+          height: 7px;
+          background: #ef3910;
+          visibility: hidden;
+          opacity: 0;
+          -webkit-transition: all 0.4s ease;
+          -moz-transition: all 0.4s ease;
+          -ms-transition: all 0.4s ease;
+          -o-transition: all 0.4s ease;
+          transition: all 0.4s ease; }
+        #mainMenu > ul > li:hover:after, #mainMenu > ul > li.current-menu-item:after {
+          visibility: visible;
+          opacity: 1; }
+        #mainMenu > ul > li:hover a, #mainMenu > ul > li.current-menu-item a {
+          text-decoration: none; }
+        #mainMenu > ul > li.current-menu-item {
+          background: #f8f8f8;
+          -webkit-box-shadow: inset 0px 0px 50px 20px #e7e7e7;
+          -moz-box-shadow: inset 0px 0px 50px 20px #e7e7e7;
+          -ms-box-shadow: inset 0px 0px 50px 20px #e7e7e7;
+          -o-box-shadow: inset 0px 0px 50px 20px #e7e7e7;
+          box-shadow: inset 0px 0px 50px 20px #e7e7e7; }
+        #mainMenu > ul > li.menu-item-has-children a:after {
+          display: inline-block; }
+        #mainMenu > ul > li:hover > ul {
+          margin-top: 0;
+          opacity: 1;
+          visibility: visible;
+          z-index: 50; }
+        #mainMenu > ul > li ul {
+          margin-top: 20px;
+          opacity: 0;
+          visibility: hidden;
+          width: 230px;
+          position: absolute;
+          left: 0px;
+          top: 100%;
+          background: rgba(215, 215, 215, 0.8);
+          font-size: 14px;
+          -webkit-transition: all 0.4s ease;
+          -moz-transition: all 0.4s ease;
+          -ms-transition: all 0.4s ease;
+          -o-transition: all 0.4s ease;
+          transition: all 0.4s ease; }
+          #mainMenu > ul > li ul li {
+            position: relative; }
+            #mainMenu > ul > li ul li a {
+              display: block;
+              padding: 5px 16px;
+              color: #ff4e50;
+              text-decoration: none; }
+            #mainMenu > ul > li ul li:hover > a, #mainMenu > ul > li ul li.current-menu-item > a {
+              color: #303030; }
+            #mainMenu > ul > li ul li:hover ul {
+              visibility: visible;
+              opacity: 1;
+              margin-top: 0; }
+            #mainMenu > ul > li ul li ul {
+              left: 230px;
+              top: 0; } }
+@media screen and (max-width: 1023px) {
+  #mainMenu {
+    position: fixed;
+    top: 0;
+    width: 100%;
+    -webkit-transform: translateX(100%);
+    -moz-transform: translateX(100%);
+    -ms-transform: translateX(100%);
+    -o-transform: translateX(100%);
+    transform: translateX(100%);
+    -webkit-transition: all 0.4s ease;
+    -moz-transition: all 0.4s ease;
+    -ms-transition: all 0.4s ease;
+    -o-transition: all 0.4s ease;
+    transition: all 0.4s ease;
+    background: #1a1a1a;
+    right: 0;
+    bottom: 0;
+    overflow: auto;
+    z-index: 999;
+    margin-top: 90px;
+    padding-bottom: 20px; }
+    #mainMenu.active {
+      -webkit-transform: translateX(0);
+      -moz-transform: translateX(0);
+      -ms-transform: translateX(0);
+      -o-transform: translateX(0);
+      transform: translateX(0); }
+    #mainMenu ul li {
+      display: inline-block;
+      width: 100%;
+      margin: 0; }
+      #mainMenu ul li a {
+        margin: 0;
+        color: #fff;
+        font-size: 18px;
+        padding: 15px 3%;
+        border-bottom: 1px solid #000;
+        position: relative;
+        display: block;
+        text-decoration: none; }
+        #mainMenu ul li a:after {
+          display: none; }
+      #mainMenu ul li:hover > a {
+        background: none;
+        color: #fff; }
+      #mainMenu ul li.menu-item-has-children > a:after {
+        display: none; }
+      #mainMenu ul li span {
+        width: 60px;
+        background: #f6542f;
+        position: absolute;
+        right: 0;
+        top: 0;
+        bottom: 0;
+        cursor: pointer; }
+        #mainMenu ul li span:before {
+          content: "";
+          position: absolute;
+          top: 50%;
+          left: 50%;
+          -webkit-transform: translate(-50%, -50%);
+          -moz-transform: translate(-50%, -50%);
+          transform: translate(-50%, -50%);
+          background: #fff;
+          width: 18px;
+          height: 2px;
+          -webkit-transition: all 0.4s ease;
+          -moz-transition: all 0.4s ease;
+          -ms-transition: all 0.4s ease;
+          -o-transition: all 0.4s ease;
+          transition: all 0.4s ease; }
+        #mainMenu ul li span:after {
+          content: "";
+          position: absolute;
+          top: 50%;
+          left: 50%;
+          -webkit-transform: translate(-50%, -50%);
+          -moz-transform: translate(-50%, -50%);
+          transform: translate(-50%, -50%);
+          background: #fff;
+          width: 2px;
+          height: 18px;
+          -webkit-transition: all 0.4s ease;
+          -moz-transition: all 0.4s ease;
+          -ms-transition: all 0.4s ease;
+          -o-transition: all 0.4s ease;
+          transition: all 0.4s ease; }
+        #mainMenu ul li span.active:after {
+          opacity: 0; }
+      #mainMenu ul li ul {
+        margin-top: 0;
+        opacity: 1;
+        visibility: visible;
+        width: 100%;
+        position: static;
+        background: none;
+        display: none;
+        -webkit-transition: none 0.4s ease;
+        -moz-transition: none 0.4s ease;
+        -ms-transition: none 0.4s ease;
+        -o-transition: none 0.4s ease;
+        transition: none 0.4s ease; }
+        #mainMenu ul li ul li {
+          display: inline-block;
+          float: none;
+          width: 100%;
+          padding-bottom: 0; }
+          #mainMenu ul li ul li a {
+            margin: 0;
+            color: #fff;
+            font-size: 18px;
+            padding: 10px 3%;
+            border-bottom: 1px solid #000;
+            position: relative;
+            text-decoration: none; }
+          #mainMenu ul li ul li span {
+            background: none; }
+          #mainMenu ul li ul li:hover a {
+            background: none;
+            color: #fff; }
+          #mainMenu ul li ul li.current-menu-item a {
+            background: #f6542f;
+            color: #fff; }
+          #mainMenu ul li ul li ul li a {
+            font-size: 16px;
+            font-style: italic; } }
+@media screen and (max-width: 768px) {
+  html {
+    font-size: 16px; } }
 
 /*# sourceMappingURL=style.css.map */
